<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_save"
        android:title="@string/salvar"
        android:icon="@drawable/check"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_take_picture"
        android:title="@string/tirar_foto"
        android:icon="@drawable/camera"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/action_send_sms"
        android:title="@string/enviar_sms"
        android:icon="@drawable/message_text"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_view_on_map"
        android:title="@string/ver_no_mapa"
        android:icon="@drawable/map"
        app:showAsAction="ifRoom"
        />

</menu>