<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/White"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="3"
                android:background="@color/colorAccent"
                android:paddingHorizontal="20dp"
                android:paddingVertical="30dp"
                android:layout_height="0dp">

                <ImageView
                    android:id="@+id/imgFoto"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/account"
                    android:layout_marginRight="20dp"
                    />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/layout_nome"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColorHint="#FFF"
                    android:theme="@style/text_label">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtNome"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="#FFFFFF"

                        android:backgroundTint="#fff"
                        android:hint="Nome"

                        android:inputType="textPersonName" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="0.5"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/info_add"
                android:textColor="@color/DarkGray"
                android:layout_marginBottom="20dp"
                android:textSize="20dp"
                />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_endereco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtEndereco"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textColor="@color/Black"
                    android:hint="@string/endereco" />


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_telefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtTelefone"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/tel"
                    android:textColor="@color/Black"
                    android:inputType="phone" />


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/email"
                    android:textColor="@color/Black"
                    android:inputType="textEmailAddress" />


            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>
