<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
>
<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="0dp"
    android:layout_weight="6">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/bglogin"
        android:scaleType="centerCrop"
        android:layout_centerInParent="true"
        android:contentDescription="Background login" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/logo"
        android:text="@string/app_name"
android:shadowColor="@color/Black"
        android:shadowRadius="10"
        android:textAllCaps="true"
        android:textColor="@color/White"
        android:textSize="30sp" />

</RelativeLayout>




<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:orientation="vertical"
    android:padding="40dp"

   >
            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:textColor="@color/DarkGray"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_text_username"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:hint="@string/username"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLines="1"
                    android:textColor="@color/DarkGray"
                    android:textSize="20sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="20dp"
                android:textColorHint="@color/DarkGray">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_text_password"
                    android:layout_width="match_parent"

                    android:layout_height="60dp"
                    android:hint="@string/pass"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:maxLines="1"
                android:textColor="@color/DarkGray"
                    android:textSize="20sp" />
            </android.support.design.widget.TextInputLayout>

<Button
    android:id="@+id/buttonlogin"
    android:layout_marginTop="30dp"
    android:layout_gravity="bottom|end"

    android:background="@drawable/bg_button"
    android:padding="20dp"
    android:drawableRight="@drawable/arrow_right"
    android:layout_height="65dp"
    android:layout_width="65dp"/>

</LinearLayout>


</LinearLayout>
