<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="10">

            <ImageView
                android:id="@+id/contactFoto"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@color/colorPrimaryLight"
                android:scaleType="centerCrop"

                />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_alignParentBottom="true"
                android:src="@drawable/shadow_inverse" />

            <TextView
                android:id="@+id/contactNome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginHorizontal="8dp"
                android:textSize="20dp"
                android:maxLines="1"
                android:paddingBottom="25dp"
                android:paddingLeft="50px"
                android:textColor="@color/White"
                tools:text="Nome" />

        </RelativeLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="25dp"
            android:layout_weight="0.3">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"

                    android:text="@string/endereco"
                    android:textAllCaps="true"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/contactEndereco"
                    android:layout_width="0dp"
                    android:paddingLeft="10dp"
                    android:layout_height="wrap_content"

                    android:layout_weight="5"
                    android:maxLines="1"
                    tools:text="Endereço" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"

                    android:text="@string/tel"
                    android:textAllCaps="true"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/contactTelefone"
                    android:layout_width="0dp"
                    android:paddingLeft="10dp"

                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:maxLines="1"
                    tools:text="Telefone" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"

                    android:text="@string/email"
                    android:textAllCaps="true"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/contactEmail"
                    android:layout_width="0dp"
                    android:paddingLeft="10dp"

                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:maxLines="1"
                    tools:text="Email" />

            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
</ScrollView>
